--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,232 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{laporta2018selection,
+  title={Selection of value at risk models for energy commodities},
+  author={Laporta, Alessandro G and Merlo, Luca and Petrella, Lea},
+  journal={Energy Economics},
+  volume={74},
+  pages={628--643},
+  year={2018},
+  publisher={North-Holland}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
+@article{petrella2019cross,
+  title={Cross-country assessment of systemic risk in the European stock market: evidence from a CoVaR analysis},
+  author={Petrella, Lea and Laporta, Alessandro G and Merlo, Luca},
+  journal={Social Indicators Research},
+  volume={146},
+  number={1-2},
+  pages={169--186},
+  year={2019},
+  publisher={Springer Netherlands Dordrecht}
+}
+
+@article{merlo2020sectoral,
+  title={Sectoral decomposition of CO2 world emissions: A joint quantile regression approach},
+  author={Merlo, Luca and Petrella, Lea and Raponi, Valentina and others},
+  journal={International Review of Environmental and Resource Economics},
+  volume={14},
+  number={2-3},
+  pages={197--239},
+  year={2020},
+  publisher={Now Publishers, Inc.}
+}
+
+@article{maruotti2020two,
+  title={A two-part finite mixture quantile regression model for semi-continuous longitudinal data},
+  author={Maruotti, Antonello and Merlo, Luca and Petrella, Lea},
+  journal={arXiv preprint arXiv:2010.12521},
+  year={2020}
+}
+
+@article{merlo2022two,
+  title={Two-part quantile regression models for semi-continuous longitudinal data: a finite mixture approach},
+  author={Merlo, Luca and Maruotti, Antonello and Petrella, Lea},
+  journal={Statistical Modelling},
+  volume={22},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  pages={485--508},
+  year={2022},
+  publisher={SAGE Publications Sage India: New Delhi, India}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{scarci2022covid,
+  title={COVID-19 after lung resection in northern Italy},
+  author={Scarci, Marco and Raveglia, Federico and Bortolotti, Luigi and Benvenuti, Mauro and Merlo, Luca and Petrella, Lea and Cardillo, Giuseppe and Rocco, Gaetano},
+  booktitle={Seminars in Thoracic and Cardiovascular Surgery},
+  volume={34},
+  number={2},
+  pages={726--732},
+  year={2022},
+  organization={WB Saunders}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{merlo2021forecasting,
+  title={Forecasting VaR and ES using a joint quantile regression and its implications in portfolio allocation},
+  author={Merlo, Luca and Petrella, Lea and Raponi, Valentina},
+  journal={Journal of Banking \& Finance},
+  volume={133},
+  pages={106248},
+  year={2021},
+  publisher={North-Holland}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{merlo2021quantile,
+  title={Quantile Mixed Hidden Markov Models for multivariate longitudinal data},
+  author={Merlo, Luca and Petrella, Lea and Tzavidis, Nikos},
+  journal={arXiv preprint arXiv:2109.06751},
+  year={2021}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{sciacchitano2021nonthyroidal,
+  title={Nonthyroidal illness syndrome (NTIS) in severe COVID-19 patients: role of T3 on the Na/K pump gene expression and on hydroelectrolytic equilibrium},
+  author={Sciacchitano, Salvatore and Capalbo, Carlo and Napoli, Christian and Negro, Andrea and De Biase, Luciano and Marcolongo, Adriano and Anibaldi, Paolo and Salvati, Valentina and Petrella, Lea and Merlo, Luca and others},
+  journal={Journal of Translational Medicine},
+  volume={19},
+  number={1},
+  pages={1--18},
+  year={2021},
+  publisher={BioMed Central}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{merlo2022quantile,
+  title={Quantile mixed hidden Markov models for multivariate longitudinal data: An application to children's Strengths and Difficulties Questionnaire scores},
+  author={Merlo, Luca and Petrella, Lea and Tzavidis, Nikos},
+  journal={Journal of the Royal Statistical Society Series C: Applied Statistics},
+  volume={71},
+  number={2},
+  pages={417--448},
+  year={2022},
+  publisher={Oxford University Press}
+}
+
+@article{merlo2022marginal,
+  title={Marginal M-quantile regression for multivariate dependent data},
+  author={Merlo, Luca and Petrella, Lea and Salvati, Nicola and Tzavidis, Nikos},
+  journal={Computational Statistics \& Data Analysis},
+  volume={173},
+  pages={107500},
+  year={2022},
+  publisher={North-Holland}
+}
+
+@incollection{foroni2022graphical,
+  title={Graphical Models for Commodities: A Quantile Approach},
+  author={Foroni, Beatrice and Merlo, Luca and Petrella, Lea},
+  booktitle={Methods and Applications in Fluorescence},
+  pages={253--259},
+  year={2022},
+  publisher={Springer International Publishing Cham}
+}
+
+@article{merlo2022quantile,
+  title={Quantile hidden semi-Markov models for multivariate time series},
+  author={Merlo, Luca and Maruotti, Antonello and Petrella, Lea and Punzo, Antonio},
+  journal={Statistics and Computing},
+  volume={32},
+  number={4},
+  pages={61},
+  year={2022},
+  publisher={Springer US New York}
+}
+
+@article{bignozzi2022inter,
+  title={Inter-order relations between moments of a Student $ t $ distribution, with an application to $ L\_p $-quantiles},
+  author={Bignozzi, Valeria and Merlo, Luca and Petrella, Lea},
+  journal={arXiv preprint arXiv:2209.12855},
+  year={2022}
+}
+
+@article{foroni2023expectile,
+  title={Expectile hidden Markov regression models for analyzing cryptocurrency returns},
+  author={Foroni, Beatrice and Merlo, Luca and Petrella, Lea},
+  journal={arXiv preprint arXiv:2301.09722},
+  year={2023}
+}
+
+@incollection{merlo2020multivariate,
+  title={Multivariate Mixed Hidden Markov Model for joint estimation of multiple quantiles},
+  author={Merlo, Luca and Petrella, Lea and Tzavidis, Nikos},
+  booktitle={Book of Short Papers SIS 2020},
+  year={2020}
+}
+
+@incollection{merlo2021unconditional,
+  title={Unconditional M-quantile regression},
+  author={Merlo, Luca and Lea, Petrella and Nikos, Tzavidis},
+  booktitle={CLADAG 2021 BOOK OF ABSTRACTS AND SHORT PAPERS},
+  volume={128},
+  pages={163--166},
+  year={2021}
+}
+
+@incollection{merlo2019joint,
+  title={Joint VaR and ES forecasting in a multiple quantile regression framework},
+  author={Merlo, Luca and Petrella, Lea and Raponi, Valentina},
+  booktitle={Smart Statistics for Smart Applications: book of short papers SIS 2019},
+  pages={1177--1182},
+  year={2019},
+  publisher={Pearson}
+}
+
+@incollection{merlo2021directional,
+  title={Directional M-quantile regression for multivariate dependent outcomes},
+  author={Merlo, Luca and Petrella, Lea and Tzavidis, Nikos},
+  booktitle={Book of Short Papers SIS 2021},
+  pages={164--169},
+  year={2021}
+}
+
+@incollection{merlo2022modeling,
+  title={Modeling unconditional M-quantiles in a regression framework},
+  author={Merlo, L and Petrella, Lea and Salvati, Nicola},
+  booktitle={Book of the Short Papers},
+  pages={1692--1695},
+  year={2022},
+  publisher={Pearson}
+}
+
+@incollection{foroni2022analyzing,
+  title={Analyzing the Correlation Structure of Financial Markets Using a Quantile Graphical Model},
+  author={Foroni, Beatrice and Merlo, Luca and Petrella, Lea and others},
+  booktitle={Book of the Short Papers},
+  pages={852--857},
+  year={2022},
+  publisher={Pearson}
+}
+
+@article{merlo2022quantile,
+  title={On quantile regression models for multivariate data},
+  author={Merlo, Luca and others},
+  year={2022}
+}
+
+@article{foroni2023quantile,
+  title={Quantile and expectile copula-based hidden Markov regression models for the analysis of the cryptocurrency market},
+  author={Foroni, Beatrice and Merlo, Luca and Petrella, Lea},
+  journal={arXiv preprint arXiv:2307.06400},
+  year={2023}
+}
+
+@article{merlo2023unified,
+  title={Unified unconditional regression for multivariate quantiles, M-quantiles and expectiles},
+  author={Merlo, Luca and Petrella, Lea and Salvati, Nicola and Tzavidis, Nikos},
+  journal={arXiv preprint arXiv:2308.00769},
+  year={2023}
+}
+
+@article{merlo2023estimating,
+  title={Estimating causal quantile exposure response functions via matching},
+  author={Merlo, Luca and Dominici, Francesca and Petrella, Lea and Salvati, Nicola and Wu, Xiao},
+  journal={arXiv preprint arXiv:2308.01628},
+  year={2023}
+}
+
+@incollection{merlo2023quantile,
+  title={Quantile-based graphical models for continuous and discrete variables},
+  author={Merlo, Luca and Marco, Geraci and Lea, Petrella and others},
+  booktitle={Book of the Short Papers},
+  pages={1069--1074},
+  year={2023}
 }
