--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -196,9 +196,10 @@
   publisher={Pearson}
 }
 
-@article{merlo2022quantile,
+@phdthesis{merlo2022quantile,
   title={On quantile regression models for multivariate data},
-  author={Merlo, Luca and others},
+  author={Merlo, Luca},
+  school={Sapienza University of Rome},
   year={2022}
 }
 
