--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -69,7 +69,8 @@
   volume={133},
   pages={106248},
   year={2021},
-  publisher={North-Holland}
+  publisher={North-Holland},
+  selected={true}
 }
 
 @article{merlo2021quantile,
@@ -98,7 +99,8 @@
   number={2},
   pages={417--448},
   year={2022},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  selected={true}
 }
 
 @article{merlo2022marginal,
@@ -108,7 +110,8 @@
   volume={173},
   pages={107500},
   year={2022},
-  publisher={North-Holland}
+  publisher={North-Holland},
+  selected={true}
 }
 
 @incollection{foroni2022graphical,
@@ -128,7 +131,8 @@
   number={4},
   pages={61},
   year={2022},
-  publisher={Springer US New York}
+  publisher={Springer US New York},
+  selected={true}
 }
 
 @article{bignozzi2022inter,
@@ -214,7 +218,8 @@
   title={Unified unconditional regression for multivariate quantiles, M-quantiles and expectiles},
   author={Merlo, Luca and Petrella, Lea and Salvati, Nicola and Tzavidis, Nikos},
   journal={arXiv preprint arXiv:2308.00769},
-  year={2023}
+  year={2023},
+  selected={true}
 }
 
 @article{merlo2023estimating,
