--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -215,10 +215,13 @@
 }
 
 @article{merlo2023unified,
-  title={Unified unconditional regression for multivariate quantiles, M-quantiles and expectiles},
+  title={Unified unconditional regression for multivariate quantiles, {M}-quantiles and expectiles},
   author={Merlo, Luca and Petrella, Lea and Salvati, Nicola and Tzavidis, Nikos},
-  journal={arXiv preprint arXiv:2308.00769},
+  journal={Journal of the American Statistical Association},
+  number={just-accepted},
+  pages={1--26},
   year={2023},
+  publisher={Taylor \& Francis},
   selected={true}
 }
 
