--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,13 +33,6 @@
   publisher={Now Publishers, Inc.}
 }
 
-@article{maruotti2020two,
-  title={A two-part finite mixture quantile regression model for semi-continuous longitudinal data},
-  author={Maruotti, Antonello and Merlo, Luca and Petrella, Lea},
-  journal={arXiv preprint arXiv:2010.12521},
-  year={2020}
-}
-
 @article{merlo2022two,
   title={Two-part quantile regression models for semi-continuous longitudinal data: a finite mixture approach},
   author={Merlo, Luca and Maruotti, Antonello and Petrella, Lea},
@@ -71,13 +64,6 @@
   year={2021},
   publisher={North-Holland},
   selected={true}
-}
-
-@article{merlo2021quantile,
-  title={Quantile Mixed Hidden Markov Models for multivariate longitudinal data},
-  author={Merlo, Luca and Petrella, Lea and Tzavidis, Nikos},
-  journal={arXiv preprint arXiv:2109.06751},
-  year={2021}
 }
 
 @article{sciacchitano2021nonthyroidal,
@@ -136,17 +122,10 @@
 }
 
 @article{bignozzi2022inter,
-  title={Inter-order relations between moments of a Student $ t $ distribution, with an application to $ L\_p $-quantiles},
+  title={Inter-order relations between moments of a Student $t$ distribution, with an application to $L\_p$-quantiles},
   author={Bignozzi, Valeria and Merlo, Luca and Petrella, Lea},
   journal={arXiv preprint arXiv:2209.12855},
   year={2022}
-}
-
-@article{foroni2023expectile,
-  title={Expectile hidden Markov regression models for analyzing cryptocurrency returns},
-  author={Foroni, Beatrice and Merlo, Luca and Petrella, Lea},
-  journal={arXiv preprint arXiv:2301.09722},
-  year={2023}
 }
 
 @incollection{merlo2020multivariate,
@@ -238,4 +217,16 @@
   booktitle={Book of the Short Papers},
   pages={1069--1074},
   year={2023}
+}
+
+@article{foroni2024expectile,
+  title={Expectile hidden Markov regression models for analyzing cryptocurrency returns},
+  author={Foroni, Beatrice and Merlo, Luca and Petrella, Lea},
+  journal={Statistics and Computing},
+  volume={34},
+  number={2},
+  pages={66},
+  year={2024},
+  publisher={Springer},
+  selected={true}
 }
