--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -193,6 +193,14 @@
   year={2023}
 }
 
+@incollection{foroni2023using,
+  title={Using expectile regression with latent variables for digital assets},
+  author={Foroni, Beatrice and Merlo, Luca and Petrella, Lea and others},
+  booktitle={Book of short papers SIS 2023},
+  pages={1309--1314},
+  year={2023}
+}
+
 @article{merlo2023unified,
   title={Unified unconditional regression for multivariate quantiles, {M}-quantiles and expectiles},
   author={Merlo, Luca and Petrella, Lea and Salvati, Nicola and Tzavidis, Nikos},
@@ -216,6 +224,13 @@
   author={Merlo, Luca and Marco, Geraci and Lea, Petrella and others},
   booktitle={Book of the Short Papers},
   pages={1069--1074},
+  year={2023}
+}
+
+@article{merlo2023shootings,
+  title={Quantile mixed graphical models with an application to mass public shootings in the United States},
+  author={Merlo, Luca and Geraci, Marco and Petrella, Lea},
+  journal={arXiv preprint arXiv:2309.05084},
   year={2023}
 }
 
