--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -121,13 +121,6 @@
   selected={true}
 }
 
-@article{bignozzi2022inter,
-  title={Inter-order relations between moments of a Student $t$ distribution, with an application to $L\_p$-quantiles},
-  author={Bignozzi, Valeria and Merlo, Luca and Petrella, Lea},
-  journal={arXiv preprint arXiv:2209.12855},
-  year={2022}
-}
-
 @incollection{merlo2020multivariate,
   title={Multivariate Mixed Hidden Markov Model for joint estimation of multiple quantiles},
   author={Merlo, Luca and Petrella, Lea and Tzavidis, Nikos},
@@ -243,5 +236,14 @@
   pages={66},
   year={2024},
   publisher={Springer},
+  selected={true}
+}
+
+@article{bignozzi2024inter,
+  title={Inter-order relations between equivalence for Lp-quantiles of the Student's t distribution},
+  author={Bignozzi, Valeria and Merlo, Luca and Petrella, Lea},
+  journal={Insurance: Mathematics and Economics},
+  year={2024},
+  publisher={Elsevier},
   selected={true}
 }
