--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -249,14 +249,14 @@
 }
 
 @article{healthcare12141403,
-AUTHOR = {Foti, Giulia and Merlo, Luca and Finstad, Georgia Libera and Giorgi, Gabriele},
-TITLE = {COVID-19 Symptoms and Mental Health Outcomes among Italian Healthcare Workers: A Latent Class Analysis},
-JOURNAL = {Healthcare},
-VOLUME = {12},
-YEAR = {2024},
-NUMBER = {14},
-ARTICLE-NUMBER = {1403},
-URL = {https://www.mdpi.com/2227-9032/12/14/1403},
-ISSN = {2227-9032},
-DOI = {10.3390/healthcare12141403}
+author = {Foti, Giulia and Merlo, Luca and Finstad, Georgia Libera and Giorgi, Gabriele},
+title = {COVID-19 Symptoms and Mental Health Outcomes among Italian Healthcare Workers: A Latent Class Analysis},
+journal = {Healthcare},
+volume = {12},
+year = {2024},
+number = {14},
+article-number = {1403},
+url = {https://www.mdpi.com/2227-9032/12/14/1403},
+issn = {2227-9032},
+doi = {10.3390/healthcare12141403}
 }
