--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -240,7 +240,7 @@
 }
 
 @article{bignozzi2024inter,
-  title={Inter-order relations between equivalence for L$p$-quantiles of the Student's t distribution},
+  title={Inter-order relations between equivalence for L$_p$-quantiles of the Student's t distribution},
   author={Bignozzi, Valeria and Merlo, Luca and Petrella, Lea},
   journal={Insurance: Mathematics and Economics},
   year={2024},
