--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -262,7 +262,7 @@ doi = {10.3390/healthcare12141403}
 }
 
 @article{lee2024childhood,
-  title={Childhood PM$_{2.5}$ exposure and upward mobility in the United States},
+  title={Childhood PM${2.5}$ exposure and upward mobility in the United States},
   author={Lee, Sophie-An Kingsbury and Merlo, Luca and Dominici, Francesca},
   journal={Proceedings of the National Academy of Sciences},
   volume={121},
