--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -240,7 +240,7 @@
 }
 
 @article{bignozzi2024inter,
-  title={Inter-order relations between equivalence for L$_p$-quantiles of the Student's t distribution},
+  title={Inter-order relations between equivalence for Lp-quantiles of the Student's t distribution},
   author={Bignozzi, Valeria and Merlo, Luca and Petrella, Lea},
   journal={Insurance: Mathematics and Economics},
   year={2024},
@@ -262,7 +262,7 @@ doi = {10.3390/healthcare12141403}
 }
 
 @article{lee2024childhood,
-  title={Childhood PM${2.5}$ exposure and upward mobility in the United States},
+  title={Childhood PM2.5 exposure and upward mobility in the United States},
   author={Lee, Sophie-An Kingsbury and Merlo, Luca and Dominici, Francesca},
   journal={Proceedings of the National Academy of Sciences},
   volume={121},
