--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -272,3 +272,14 @@ doi = {10.3390/healthcare12141403}
   publisher={National Academy of Sciences},
   selected={true}
 }
+
+@article{10.1093/jrsssa/qnae155,
+    author = {Merlo, Luca and Geraci, Marco and Petrella, Lea},
+    title = {Mid-quantile mixed graphical models with an application to mass public shootings in the U.S.},
+    journal = {Journal of the Royal Statistical Society Series A: Statistics in Society},
+    pages = {qnae155},
+    year = {2025},
+    issn = {0964-1998},
+    doi = {10.1093/jrsssa/qnae155},
+    selected={true}
+}
