--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -273,6 +273,15 @@ doi = {10.3390/healthcare12141403}
   selected={true}
 }
 
+@inproceedings{merlo2024random,
+  title={Random Effects in Unconditional Quantile Regressions},
+  author={Merlo, Luca and Salvati, Nicola and Fabrizi, Enrico and Frumento, Paolo and Petrella, Lea},
+  booktitle={Scientific Meeting of the Italian Statistical Society},
+  pages={246--250},
+  year={2024},
+  organization={Springer}
+}
+
 @article{10.1093/jrsssa/qnae155,
     author = {Merlo, Luca and Geraci, Marco and Petrella, Lea},
     title = {Mid-quantile mixed graphical models with an application to mass public shootings in the U.S.},
@@ -282,4 +291,60 @@ doi = {10.3390/healthcare12141403}
     issn = {0964-1998},
     doi = {10.1093/jrsssa/qnae155},
     selected={true}
+}
+
+@inproceedings{forte2025spatial,
+  title={Spatial Quantile Random Forests for the Analysis of Upward Mobility in Texas},
+  author={Forte, Sabrina and Foroni, Beatrice and Merlo, Luca and Petrella, Lea},
+  booktitle={Scientific Meeting of the Italian Statistical Society},
+  pages={255--260},
+  year={2025},
+  organization={Springer}
+}
+
+@inproceedings{saiz2025two,
+  title={Two-Part Expectile Regression Models for Longitudinal Data: An Application to Students’ Academic Performance},
+  author={Saiz, Maria and Merlo, Luca and Petrella, Lea},
+  booktitle={Scientific Meeting of the Italian Statistical Society},
+  pages={292--298},
+  year={2025},
+  organization={Springer}
+}
+
+@inproceedings{merlo2025estimation,
+  title={Estimation of Undirected Graphs for Multivariate Time Series Using Hidden Semi-Markov Models},
+  author={Merlo, Luca and Ferrante, Emilio and Foroni, Beatrice and Petrella, Lea},
+  booktitle={Scientific Meeting of the Italian Statistical Society},
+  pages={36--41},
+  year={2025},
+  organization={Springer}
+}
+
+@article{foroni2025hidden,
+  title={Hidden Markov quantile graphical models},
+  author={Foroni, Beatrice and Merlo, Luca and Petrella, Lea and Salvati, Nicola},
+  journal={Journal of Computational and Graphical Statistics},
+  number={just-accepted},
+  pages={1--20},
+  year={2025},
+  publisher={Taylor \& Francis},
+  selected={true}
+}
+
+@article{profili2025ability,
+  title={Ability and motivation profiles among chronically ill employees: using latent profile analysis to understand the impact of utilization HR practices on work engagement},
+  author={Profili, Silvia and Sammarra, Alessia and Innocenti, Laura and Merlo, Luca and Peccei, Riccardo},
+  journal={The International Journal of Human Resource Management},
+  pages={1--29},
+  year={2025},
+  publisher={Taylor \& Francis}
+}
+
+@article{ricciardi2025short,
+  title={Short-term outcomes after minimally invasive surgery: does sex make a difference?},
+  author={Ricciardi, Sara and Giovanniello, Delia and Jaus, Massimo O and Merlo, Luca and Petrella, Lea and Treggiari, Stefano and Mantovani, Sara and Cardillo, Giuseppe},
+  journal={Video-Assisted Thoracic Surgery},
+  volume={10},
+  year={2025},
+  publisher={AME Publishing Company}
 }
